--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head><!-- where all the meta data will go, like and files we need to include -->
     <title>My Little Rainbow</title>
-    <link rel="stylesheet" href="css/style.css"><!-- the title is what appears on your tab -->
+    <link rel="stylesheet" href="css/main.css"><!-- the title is what appears on your tab -->
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
